# testpython

drweb/: README.md  main.py  requirements.txt  tests.py
radium/: README.md  conftest.py  main.py  pyproject.toml  requirements.txt  setup.cfg
radium/nitpick/: all.toml  file-structure.toml  isort.toml  pytest.toml  styleguide.toml
radium/src/: functions.py
radium/tests/: test_main.py
